--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Firmicus <firmicus āt gmx dōt net>
+# Maintainer: Rémy Oudompheng <remy.archlinux.org>
 
 pkgname=texlive-fontsextra
 pkgver=2010.20923
-pkgrel=1
+pkgrel=2
 pkgdesc="TeX Live - all sorts of extra fonts"
 license=('GPL')
 arch=(any)
