--- a/kdepim-runtime/kde-unstable/PKGBUILD
+++ b/kdepim-runtime/kde-unstable/PKGBUILD
@@ -13,7 +13,7 @@ depends=('kdepimlibs' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost')
 install=${pkgname}.install
 #source=("http://download.kde.org/unstable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-source=("http://download.kde.org/unstable/kdepim/${pkgver}/${pkgname}-${pkgver}.tar.bz2")
+source=("http://download.kde.org/unstable/kdepim/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 sha1sums=('81631b6586ca74397ac5083e24f8e4f592c4f043')
 
 build() {
