--- a/xfce4-wavelan-plugin/trunk/PKGBUILD
+++ b/xfce4-wavelan-plugin/trunk/PKGBUILD
@@ -1,29 +1,34 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-wavelan-plugin
-pkgver=0.5.5
+pkgver=0.5.6
 pkgrel=1
 pkgdesc="plugin to monitor wifi connectivity for the Xfce4 panel"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('custom')
 url="http://goodies.xfce.org/projects/panel-plugins/xfce4-wavelan-plugin/"
 groups=('xfce4-goodies')
-depends=('xfce4-panel')
-makedepends=('pkgconfig')
+depends=('xfce4-panel' 'libxfcegui4')
+makedepends=('intltool')
 options=('!libtool')
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2 tooltip.diff)
-md5sums=('1fa00ad9f24cc29536cb7622016c6a5e'
-         '923b1f2bf2d26cf01f784b6194f64d93')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.5/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('b23a4c9c2a206242ee4db8186dd01801')
 
 build() {
+  cd ${srcdir}/${pkgname}-${pkgver}  
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug	
+  make
+}
+
+package() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  # fix tooltip, see http://bugzilla.xfce.org/show_bug.cgi?id=5866
-  patch -Np1 -i ${srcdir}/tooltip.diff || return 1
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib \
-    --localstatedir=/var --disable-static
-  make || return 1
-  make DESTDIR=${pkgdir} install || return 1
-  install -Dm644 COPYING ${startdir}/pkg/usr/share/licenses/${pkgname}/COPYING
+  make DESTDIR=${pkgdir} install
+  install -Dm644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING
 }
