--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=gmp
 pkgver=5.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A free library for arbitrary precision arithmetic"
 arch=('i686' 'x86_64')
 url="http://gmplib.org/"
@@ -18,10 +18,14 @@ md5sums=('6bac6df75c192a13419dfd71d19240a7')
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   [ "${CARCH}" = "i686" ] && export ABI="32"
-  ./configure --build=$CHOST \
+  ./configure --build=${CHOST} \
     --prefix=/usr --infodir=/usr/share/info \
-    --enable-cxx || return 1
-  make || return 1
-  make check || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+    --enable-cxx
+  make
+  make check
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
