remove provides and replaces and fix conflicts
git-svn-id: file:///srv/repos/svn-packages/svn@105730 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/python-qt/trunk/PKGBUILD
+++ b/python-qt/trunk/PKGBUILD
@@ -13,9 +13,7 @@ makedepends=('phonon' 'qt-assistant-compat')
 optdepends=('phonon: enable audio and video in PyQt applications'
 	'qscintilla: QScintilla API'
 	'qt-assistant-compat: add PyQt online help in Qt Assistant')
-provides=('pyqt4')
-replaces=('pyqt4')
-conflicts=('pyqt4')
+conflicts=('python2-qt')
 source=("http://riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-${pkgver}.tar.gz"
         'fix-stackedwidget-bug.patch')
 md5sums=('142a32f126f205a2bd77f6a9910f5333'
