--- a/qscintilla/trunk/PKGBUILD
+++ b/qscintilla/trunk/PKGBUILD
@@ -1,19 +1,17 @@
-# $Id: PKGBUILD 46926 2009-07-22 04:56:17Z pierre $
+# $Id$
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Douglas Soares de Andrade <dsa@aur.archlinux.org>
-# Contributor: Michal Krenek <mikos@sg1.cz>
-# Contributor: DaNiMoTh <jjdanimoth.aur@gmail.com>
 
 pkgbase=qscintilla
-pkgname=(qscintilla python-qscintilla)
+pkgname=('qscintilla' 'python2-qscintilla')
 pkgver=2.4.6
-pkgrel=1
+pkgrel=2
 license=('GPL')
 arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.co.uk/software/qscintilla/intro"
-makedepends=('pyqt')
-source=(http://riverbankcomputing.com/static/Downloads/QScintilla2/QScintilla-gpl-${pkgver}.tar.gz
-        configure.py-objdir-support.diff)
+makedepends=('python2-qt')
+source=("http://riverbankcomputing.com/static/Downloads/QScintilla2/QScintilla-gpl-${pkgver}.tar.gz"
+        'configure.py-objdir-support.diff')
 md5sums=('424a89736b900e6ca5bc6d929cdafaf8'
          '8cf9c06252e2f11ab00e62848e322fd3')
 
@@ -49,11 +47,12 @@ package_qscintilla() {
     make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
 }
 
-package_python-qscintilla() {
+package_python2-qscintilla() {
     pkgdesc="Python bindings for QScintilla2"
-    conflicts=('python-qscintilla2')
-    replaces=('python-qscintilla2')
-    depends=('qscintilla' 'pyqt')
+    provides=("python-qscintilla=${pkgver}")
+    conflicts=('python-qscintilla2' 'python-qscintilla')
+    replaces=('python-qscintilla2' 'python-qscintilla')
+    depends=('qscintilla' 'python2-qt')
 
     cd "${srcdir}/QScintilla-gpl-${pkgver}/Python"
     make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
