--- a/libva/trunk/PKGBUILD
+++ b/libva/trunk/PKGBUILD
@@ -1,19 +1,19 @@
 # $Id$
 # Maintainer : Ionut Biru <ibiru@archlinux.org>
 pkgname=libva
-pkgver=1.0.6
+pkgver=1.0.7
 pkgrel=1
 pkgdesc="Video Acceleration (VA) API for Linux"
 arch=('i686' 'x86_64')
 url="http://freedesktop.org/wiki/Software/vaapi"
 license=('MIT')
-depends=('libgl' 'libdrm' 'libxfixes')
+depends=('libgl' 'libdrm>=2.4.23' 'libxfixes')
 makedepends=('mesa')
 optdepends=('vdpau-video: VDPAU backend for VA API')
 options=('!libtool')
 source=(http://cgit.freedesktop.org/libva/snapshot/${pkgname}-${pkgver}.tar.bz2
         libva-dont-install-tests.patch)
-md5sums=('c4680eb0d9004c72cd6e4de45cf479cf'
+md5sums=('3903b0463e2892f8afbd631daa5619ae'
          '0a9bd14c36545c0e9819dfe32ea80f41')
 
 build() {
