--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,25 +1,32 @@
 # $Id$
-# Maintainer: 
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Aurelien Foret <orelien@chez.com>
 
 pkgname=xfce4-diskperf-plugin
-pkgver=2.1.0
-pkgrel=5
+pkgver=2.2.0
+pkgrel=1
 pkgdesc="Plugin for the Xfce4 panel displaying instant disk/partition performance"
 arch=('i686' 'x86_64')
 license=('custom')
-url="http://xfce-goodies.berlios.de/"
+url="http://goodies.xfce.org/projects/panel-plugins/xfce4-diskperf-plugin"
 groups=('xfce4-goodies')
-depends=('xfce4-panel')
-makedepends=('pkgconfig' 'perlxml')
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('fc74a0c7d2b9486cdb704a072cd72b83')
+depends=('xfce4-panel' 'libxfcegui4' 'libxfce4ui')
+makedepends=('intltool')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/2.2/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('e970158fcac5b58bdc1539bc84d7b5ec')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
-    --localstatedir=/var --disable-static
-  make || return 1
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
+}
+
+package() {
   make DESTDIR=${pkgdir} install
   install -Dm644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING
 }
