--- a/xfce4-genmon-plugin/trunk/PKGBUILD
+++ b/xfce4-genmon-plugin/trunk/PKGBUILD
@@ -1,25 +1,33 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-genmon-plugin
 pkgver=3.2
-pkgrel=1
+pkgrel=2
 pkgdesc="plugin that monitors customizable programs stdout for the Xfce4 panel"
 arch=(i686 x86_64)
 license=('LGPL2')
 url="http://xfce-goodies.berlios.de/"
 groups=('xfce4-goodies')
-depends=('xfce4-panel>=4.5.99.1')
-makedepends=('pkgconfig')
+depends=('xfce4-panel' 'libxfcegui4')
+makedepends=('intltool')
 options=('!libtool')
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/3.2/${pkgname}-${pkgver}.tar.bz2)
 md5sums=('5f292aa102a87d45207b6a373939a35d')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib \
-    --localstatedir=/var --disable-static
-  make || return 1
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR=${pkgdir} install
 }
