--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,27 +4,31 @@
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-mpc-plugin
-pkgver=0.3.5
+pkgver=0.3.6
 pkgrel=1
 pkgdesc="plugin to control the music player daemon from the xfce4-panel"
 arch=(i686 x86_64)
 license=('GPL2')
 url="http://goodies.xfce.org/projects/panel-plugins/xfce4-mpc-plugin"
 groups=('xfce4-goodies')
-depends=('xfce4-panel' 'libmpd>=0.16.1')
-makedepends=('pkgconfig' 'perlxml')
+depends=('xfce4-panel' 'libxfcegui4' 'libmpd>=0.16.1')
+makedepends=('intltool')
 options=(!libtool)
 source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.3/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('20ea8c37dcb90a8ae3cb026463b27f06')
+md5sums=('a6366662885d803dcebd82bbb91ed3c7')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib \
-    --localstatedir=/var --disable-static
-  make || return 1
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
 }
 
 package(){
   cd ${srcdir}/${pkgname}-${pkgver}
-  make DESTDIR=${pkgdir} install || return 1
+  make DESTDIR=${pkgdir} install
 }
