--- a/xfce4-xkb-plugin/trunk/PKGBUILD
+++ b/xfce4-xkb-plugin/trunk/PKGBUILD
@@ -1,19 +1,19 @@
 # $Id$
-# Maintainer: tobias <tobias funnychar archlinux.org>
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-xkb-plugin
 pkgver=0.5.3.3
-pkgrel=2
+pkgrel=3
 pkgdesc="plugin to switch keyboard layouts for the Xfce4 panel"
 arch=(i686 x86_64)
 license=('custom')
-url="http://xfce-goodies.berlios.de/"
+url="http://goodies.xfce.org/projects/panel-plugins/xfce4-xkb-plugin"
 groups=('xfce4-goodies')
-depends=('xfce4-panel>=4.5.99.1' 'libxklavier>=5.0' 'librsvg')
-makedepends=('pkgconfig' 'intltool')
+depends=('xfce4-panel' 'libxfcegui4' 'libxklavier>=5.0' 'librsvg')
+makedepends=('intltool')
 options=('!libtool')
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.gz
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.5/${pkgname}-${pkgver}.tar.gz
         xfce4-xkb-plugin-0.5.3.3-libxklavier.patch)
 sha1sums=('5e83d55cd6f14a62a87ccadd0f11eee070a6f4a7'
           '44691bd348e33ea17afe45869675c0f7c03ed32f')
@@ -21,9 +21,17 @@ sha1sums=('5e83d55cd6f14a62a87ccadd0f11eee070a6f4a7'
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   patch -Np1 -i "${srcdir}/xfce4-xkb-plugin-0.5.3.3-libxklavier.patch" || return 1
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib \
-    --localstatedir=/var --disable-static || return 1
-  make || return 1
-  make DESTDIR=${pkgdir} install || return 1
-  install -Dm644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING || return 1
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
+  make DESTDIR=${pkgdir} install
+  install -Dm644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING
 }
