--- a/xfce4-xfapplet-plugin/trunk/PKGBUILD
+++ b/xfce4-xfapplet-plugin/trunk/PKGBUILD
@@ -4,21 +4,29 @@
 
 pkgname=xfce4-xfapplet-plugin
 pkgver=0.1.0
-pkgrel=6
+pkgrel=7
 pkgdesc="plugin that allows to use gnome applets in the Xfce4 panel"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://xfce-goodies.berlios.de/"
 groups=('xfce4-goodies')
-depends=('xfce4-panel' 'gnome-panel')
-makedepends=('pkgconfig')
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
+depends=('xfce4-panel' 'libxfcegui4' 'gnome-panel' 'gnome-panel-bonobo')
+makedepends=('')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.1/${pkgname}-${pkgver}.tar.bz2)
 md5sums=('6a06c44b18a97626f44a240ad3bc3244')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
-    --localstatedir=/var --disable-static
-  make || return 1
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib/ \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR=${pkgdir} install
 }
