--- a/xfce4-timer-plugin/trunk/PKGBUILD
+++ b/xfce4-timer-plugin/trunk/PKGBUILD
@@ -1,25 +1,33 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Tobias Kieslich <tobias (at) archlinux.org>
 
 pkgname=xfce4-timer-plugin
-pkgver=0.6
+pkgver=0.6.1
 pkgrel=1
 pkgdesc="plugin to track time for the Xfce4 panel"
 arch=(i686 x86_64)
 license=('GPL2')
 url="http://xfce-goodies.berlios.de/"
 groups=('xfce4-goodies')
-depends=('xfce4-panel')
-makedepends=('pkgconfig')
+depends=('xfce4-panel' 'libxfcegui4')
+makedepends=('intltool')
 options=('!libtool')
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('ea50210f54922086c0cd836e3636cacd')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.6/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('ba5ae0e25f69517338f74a27fbaf4ca2')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
-    --localstatedir=/var --disable-static
-  make || return 1
-  make DESTDIR=${startdir}/pkg install
+  cd ${srcdir}/${pkgname}-${pkgver}
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib/ \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
+  make DESTDIR=${pkgdir} install
 }
