--- a/bluez/trunk/PKGBUILD
+++ b/bluez/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Geoffroy Carrier <geoffroy@archlinux.org>
 
 pkgname=bluez
-pkgver=4.84
+pkgver=4.85
 pkgrel=1
 pkgdesc="Libraries and tools for the Bluetooth protocol stack"
 url="http://www.bluez.org/"
@@ -27,7 +27,7 @@ backup=(etc/bluetooth/{main,rfcomm,audio,network,input,serial}.conf
 source=("http://www.kernel.org/pub/linux/bluetooth/${pkgname}-${pkgver}.tar.bz2"
         'bluetooth.conf.d'
         'rc.bluetooth')
-md5sums=('367c5bae959c4cc1e265d34e08e353a2'
+md5sums=('d2403e791e694048fb70cb5afbabb886'
          '8f60a5eb9d84b9c64c478d63e1c24b10'
          'ca4c39eb4bb201bd2eacad01492cd735')
 
@@ -69,7 +69,7 @@ package() {
   install -Dm644 ${srcdir}/bluetooth.conf.d \
     ${pkgdir}/etc/conf.d/bluetooth
 
-  sed -i 's#/usr/bin/python#/usr/bin/python2#' test/simple-agent
-  install -Dm755 test/simple-agent \
+  install -Dm755 test/simple-agent ${pkgdir}/usr/bin/bluez-simple-agent
+  sed -i 's#/usr/bin/python#/usr/bin/python2#' \
     ${pkgdir}/usr/bin/bluez-simple-agent
 }
