--- a/python2-sip/trunk/PKGBUILD
+++ b/python2-sip/trunk/PKGBUILD
@@ -20,7 +20,7 @@ md5sums=('8a0998fbaf34bdab2c15af3d4fa3bc0e')
 build() {
   cd ${srcdir}/sip-${pkgver}
 
-  python2 configure.py
+  python2 configure.py CFLAGS="${CFLAGS}" LFLAGS="${LDFLAGS}"
   make
 }
 
